examples/test/testpolicy1070.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1070
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key15: value23
      key43: value32
      key45: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value5
          key40: value22
          key1: value3
      podSelector:
        matchLabels:
          key2: value33
          key17: value36
          key45: value45
